--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -47,7 +47,31 @@
             <div class="element">
                 <div class="version">
                     <div class="pos">
-                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.22.03">v1.22.03</a>
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.23.0">v1.23.0</a>
+                        <span class="date">27 mai 2023</span>
+                    </div>
+                </div>
+                <div class="content-cl">
+                    <img src="../resources/img/v1.23.0.png" alt="">
+                    <h2>Bedrock skin support</h2>
+                    <p>Thanks to UUID stored by mcMMO we can easily know if a player is a bedrock player or not. If it is, then we use the TydiumAPI with his UUID to display his skin. Otherwise, we still use player name to show his skin.</p>
+                    <ul>
+                        <li>Edit PHP scripts for skins (bedrock, uuid and name)</li>
+                    </ul>
+                    <h4>Better display for:</h4>
+                    <ul>
+                        <li>Best ability cards in user page on small devices</li>
+                        <li>Labels in user page on small devices</li>
+                        <li>Table in index page</li>
+                    </ul>
+                    <hr>
+                    <p>Join our <a href="https://discord.gg/F4UKkXQX">Discord server</a> to help us improve this dashboard!</p>
+                </div>
+            </div>
+            <div class="element">
+                <div class="version">
+                    <div class="pos">
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.23.00">v1.22.03</a>
                         <span class="date">15 mai 2023</span>
                     </div>
                 </div>
@@ -56,7 +80,8 @@
                     <ul>
                         <li>This release includes fix for <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/issues/5">#5</a>.</li>
                     </ul>
-                    <p>Join our <a href="https://discord.gg/F4UKkXQX">Discord server</a> to help us improve this dashboard!</p>
+                    <hr>
+                    <p>Join our <a href="https://discord.gg/TFeEzCP4e5">Discord server</a> to help us improve this dashboard!</p>
                 </div>
             </div>
             <div class="element">
