--- a/themes.html
+++ b/themes.html
@@ -62,7 +62,7 @@
                 <div class="mc-blue card">
                     <img class="banner-top" src="resources/themes/mc/blue/mc-blue.png">
                     <span class="line">
-                        <span class="label">Blue</span>
+                        <span class="label">Bleu Céleste</span>
                         <a class="raw btn-main" href="resources/themes/mc/blue/upload.css">Raw</a>
                         <a class="dl" href="resources/themes/mc/blue/upload.css" download>
                             <i class="fa-solid fa-file-arrow-down"></i>
@@ -72,7 +72,7 @@
                 <div class="mc-green card">
                     <img class="banner-top" src="resources/themes/mc/green/mc-green.png">
                     <span class="line">
-                        <span class="label">Green</span>
+                        <span class="label">Vert Printanier</span>
                         <a class="raw btn-main" href="resources/themes/mc/green/upload.css">Raw</a>
                         <a class="dl" href="resources/themes/mc/green/upload.css" download>
                             <i class="fa-solid fa-file-arrow-down"></i>
@@ -82,9 +82,19 @@
                 <div class="mc-red card">
                     <img class="banner-top" src="resources/themes/mc/red/mc-red.png">
                     <span class="line">
-                        <span class="label">Red</span>
+                        <span class="label">Rouge Ardent</span>
                         <a class="raw btn-main" href="resources/themes/mc/red/upload.css">Raw</a>
                         <a class="dl" href="resources/themes/mc/red/upload.css" download>
+                            <i class="fa-solid fa-file-arrow-down"></i>
+                        </a>
+                    </span>
+                </div>
+                <div class="mc-orange card">
+                    <img class="banner-top" src="resources/themes/mc/orange/mc-orange.png">
+                    <span class="line">
+                        <span class="label">Orange Cuivré</span>
+                        <a class="raw btn-main" href="resources/themes/mc/orange/upload.css">Raw</a>
+                        <a class="dl" href="resources/themes/mc/orange/upload.css" download>
                             <i class="fa-solid fa-file-arrow-down"></i>
                         </a>
                     </span>
@@ -92,7 +102,7 @@
             </div>
         </div>
         <div class="last-line">
-            <p class="btn-main">More coming soon...</p>
+            <p class="btn-main no-click">More coming soon...</p>
         </div>
     </div>
 </main>
