--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <div class="fg">
             <h1>New release</h1>
             <h3>New release every two friday, based on our motivation and <span>your ideas !</span></h3>
-            <h3 class="version">Current version is v1.22.03</h3>
-            <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">
-                Submit your ideas on the GitHub project
+            <h3 class="version">Current version is v1.23.0</h3>
+            <a href="https://discord.gg/TFeEzCP4e5">
+                Submit your ideas on the Discord
                 <i class="fa-solid fa-arrow-right"></i>
             </a>
             <h2>Stay tuned</h2>
